--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   </script>
 </body>
-
+<!-- 
 D:\>cd Dev
 
 D:\Dev>git clone https://github.com/sixsuya/bad_javascript
@@ -147,7 +147,7 @@ fatal: Authentication failed for 'https://github.com/sixsuya/bad_javascript/'
 
 D:\Dev\bad_javascript>git remote -v
 origin  https://github.com/sixsuya/bad_javascript (fetch)
-origin  https://github.com/sixsuya/bad_javascript (push)
+origin  https://github.com/sixsuya/bad_javascript (push) -->
 
 
 </html>
