--- a/index.html
+++ b/index.html
@@ -15,19 +15,13 @@
 
 <body>
   <h3>자바스크립트 연습</h3>
-  <ul>내가 좋아하는 음식(육성수)
+  <ul>내가 좋아하는 음식(육성수)_2
     <li>자장면</li>
     <li>고추짬뽕</li>
     <li>오마카세</li>
     <li>평양냉면</li>
   </ul>
-<<<<<<< HEAD
-  <script src="/fun_javascript/js/function2.js">
-
-  </script>
-</body>
-=======
-  <script src="/fun_javascript/js/todo_1217_done.js">
+  <script src="/todo/todo_1218.js">
 
   </script>
 </body>
@@ -155,6 +149,5 @@ D:\Dev\bad_javascript>git remote -v
 origin  https://github.com/sixsuya/bad_javascript (fetch)
 origin  https://github.com/sixsuya/bad_javascript (push)
  -->
->>>>>>> fadb5c50afe77310139f5ad04d77c00083e53b42
 
 </html>
