--- a/index.html
+++ b/index.html
@@ -1,153 +1,80 @@
 <!DOCTYPE html>
 <html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>index.html</title>
+  </head>
+  <style>
+    * {
+      background-color: black;
+      color: white;
+    }
+  </style>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>index.html</title>
-</head>
-<style>
-  * {
-    background-color: black;
-    color: white;
-  }
-</style>
+  <body>
+    <h3>자바스크립트 연습</h3>
+    <ul id="second">
+      내가 좋아하는 음식(육성수)
+      <!-- 햄버거 li 리스트는 js파일로 만든 이벤트 걸리는지 확인 위해 만듬 -->
+      <li>노브랜드</li>
+      <li>맥도날드</li>
+      <li>버거킹</li>
+    </ul>
+    <button>이벤트</button>
 
-<body>
-  <h3>자바스크립트 연습</h3>
-  <ul>내가 좋아하는 음식(육성수)_2
-    <li>자장면</li>
-    <li>고추짬뽕</li>
-    <li>오마카세</li>
-    <li>평양냉면</li>
-  </ul>
-  <script src="/todo/todo_1218.js">
-
-  </script>
-</body>
-<!-- 
-D:\>cd Dev
-
-D:\Dev>git clone https://github.com/sixsuya/bad_javascript
-Cloning into 'bad_javascript'...
-remote: Enumerating objects: 13, done.
-remote: Counting objects: 100% (13/13), done.
-remote: Compressing objects: 100% (12/12), done.
-remote: Total 13 (delta 0), reused 13 (delta 0), pack-reused 0 (from 0)
-Receiving objects: 100% (13/13), 6.47 KiB | 2.16 MiB/s, done.
-
-D:\Dev>dir
- D 드라이브의 볼륨: 새 볼륨
- 볼륨 일련 번호: 48ED-4541
-
- D:\Dev 디렉터리
-
-2025-12-17  오후 09:04    <DIR>          .
-2025-12-17  오후 09:04    <DIR>          ..
-2025-12-17  오후 09:04    <DIR>          bad_javascript
-               0개 파일                   0 바이트
-               3개 디렉터리  516,853,915,648 바이트 남음
-
-
-D:\Dev>dir bad_javascript
- D 드라이브의 볼륨: 새 볼륨
- 볼륨 일련 번호: 48ED-4541
-
- D:\Dev\bad_javascript 디렉터리
-
-2025-12-17  오후 09:04    <DIR>          .
-2025-12-17  오후 09:04    <DIR>          ..
-2025-12-17  오후 09:08               537 index.html
-2025-12-17  오후 09:04    <DIR>          js
-2025-12-17  오후 09:04             4,105 js기본.html
-2025-12-17  오후 09:04                44 README.md
-               3개 파일               4,686 바이트
-               3개 디렉터리  516,853,915,648 바이트 남음
-
-D:\Dev>cd bad_javascript
-
-D:\Dev\bad_javascript>git add .
-
-D:\Dev\bad_javascript>git commit -m "12/17 숙제완료"
-Author identity unknown
-
-*** Please tell me who you are.
-
-Run
-
-  git config --global user.email "you@example.com"
-  git config --global user.name "Your Name"
-
-to set your account's default identity.
-Omit --global to set the identity only in this repository.
-
-fatal: unable to auto-detect email address (got 'ifyou@DESKTOP-OVKMIPB.(none)')
-
-D:\Dev\bad_javascript>git config --global user.email "ifyou032@gmail.com"
-
-D:\Dev\bad_javascript>git config --global user.name "sixsuya"
-
-D:\Dev\bad_javascript>git commit -m "12/17 숙제완료"
-[main 3d723c5] 12/17 숙제완료
- 2 files changed, 13 insertions(+), 1 deletion(-)
-
-D:\Dev\bad_javascript>git push -u origin main
-Username for 'https://github.com': sixsuya
-Password for 'https://sixsuya@github.com':
-remote: Invalid username or token. Password authentication is not supported for Git operations.
-fatal: Authentication failed for 'https://github.com/sixsuya/bad_javascript/'
-
-D:\Dev\bad_javascript>git config --global user.email "ifyou032@gmail.com"
-
-D:\Dev\bad_javascript>git push -u origin main
-Username for 'https://github.com': sixsuya
-Password for 'https://sixsuya@github.com':
-remote: Invalid username or token. Password authentication is not supported for Git operations.
-fatal: Authentication failed for 'https://github.com/sixsuya/bad_javascript/'
-
-D:\Dev\bad_javascript>git push -u origin branch
-error: src refspec branch does not match any
-error: failed to push some refs to 'https://github.com/sixsuya/bad_javascript'
-
-D:\Dev\bad_javascript>git remote -v
-origin  https://github.com/sixsuya/bad_javascript (fetch)
-origin  https://github.com/sixsuya/bad_javascript (push)
-
-D:\Dev\bad_javascript>git push origin master
-error: src refspec master does not match any
-error: failed to push some refs to 'https://github.com/sixsuya/bad_javascript'
-
-D:\Dev\bad_javascript>git push origin branch
-error: src refspec branch does not match any
-error: failed to push some refs to 'https://github.com/sixsuya/bad_javascript'
-
-D:\Dev\bad_javascript>git push origin main
-Username for 'https://github.com': sixsuya
-Password for 'https://sixsuya@github.com':
-remote: Invalid username or token. Password authentication is not supported for Git operations.
-fatal: Authentication failed for 'https://github.com/sixsuya/bad_javascript/'
-
-D:\Dev\bad_javascript>git push origin main
-Username for 'https://github.com': sixsuya
-Password for 'https://sixsuya@github.com':
-remote: Invalid username or token. Password authentication is not supported for Git operations.
-fatal: Authentication failed for 'https://github.com/sixsuya/bad_javascript/'
-
-D:\Dev\bad_javascript>git push origin main
-Username for 'https://github.com': sixsuya
-Password for 'https://sixsuya@github.com':
-remote: Invalid username or token. Password authentication is not supported for Git operations.
-fatal: Authentication failed for 'https://github.com/sixsuya/bad_javascript/'
-
-D:\Dev\bad_javascript>git push origin main
-Username for 'https://github.com': sixsuuya
-Password for 'https://sixsuuya@github.com':
-remote: Invalid username or token. Password authentication is not supported for Git operations.
-fatal: Authentication failed for 'https://github.com/sixsuya/bad_javascript/'
-
-D:\Dev\bad_javascript>git remote -v
-origin  https://github.com/sixsuya/bad_javascript (fetch)
-origin  https://github.com/sixsuya/bad_javascript (push)
- -->
-
+    <table border="3">
+      <thead>
+        <tr>
+          <th>아이디</th>
+          <th>이름</th>
+          <th>포인트</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>use01</td>
+          <td>홍길동</td>
+          <td>800</td>
+        </tr>
+        <tr>
+          <td>user02</td>
+          <td>김문희</td>
+          <td>박동철</td>
+        </tr>
+        <tr>
+          <td>user03</td>
+          <td>박동철</td>
+          <td>980</td>
+        </tr>
+        <tr>
+          <td colspan="2">합계</td>
+          <td>2536</td>
+        </tr>
+      </tbody>
+    </table>
+    <script src="/todo/exe3.js"></script>
+  </body>
 </html>
+
+<!-- <li
+        onclick="liClickFnc(event)"
+        onmouseover="mouseOverFnc(event)"
+        onmouseout="mouseOutFnc(event)"
+      >
+        고추짬뽕
+      </li>
+      <li
+        onclick="liClickFnc(event)"
+        onmouseover="mouseOverFnc(event)"
+        onmouseout="mouseOutFnc(event)"
+      >
+        오마카세
+      </li>
+      <li
+        onclick="liClickFnc(event)"
+        onmouseover="mouseOverFnc(event)"
+        onmouseout="mouseOutFnc(event)"
+      >
+        평양냉면
+      </li> -->
