--- a/index.html
+++ b/index.html
@@ -23,19 +23,10 @@
     </ul>
     <button>이벤트</button>
 
- -->
-    <script src="/todo/todo_1219.js"></script>
+
+    <script src="/js/date.js"></script>
   </body>
 </html>
-
-<!-- // 과제 - 1219
-// 친구 (이름, 연락처, 생일 : '08-20-12' <= date 타입으로, 키: 163.5 <= 소수점 있어야 함)
-// 4명 생성 => friends 배열에 저장.
-// 친구 평균키 : 17x.x , 제일 큰 키 : xxx.x (친구이름 나오게)
-// table 태그를 활용해서 ducument.write(); 그리기.
-// 참고사이트 : mdn web docs
-// https://developer.mozilla.org/ko/    <= 개발자를 위한 웹 기술 > web API > Documents
-// ChatGPT  => 코드 만들고 나서 컨펌 받을때 사용하면 유용함 -->
 
 <!-- <li
         onclick="liClickFnc(event)"
