--- a/index.html
+++ b/index.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>index.html</title>
-  </head>
-  <style>
-    * {
-      background-color: black;
-      color: white;
-    }
-  </style>
 
-  <body>
-    <h3>자바스크립트 연습</h3>
-    <ul id="second">
-      내가 좋아하는 음식(육성수)
-      <!-- 햄버거 li 리스트는 js파일로 만든 이벤트 걸리는지 확인 위해 만듬 -->
-      <li>노브랜드</li>
-      <li>맥도날드</li>
-      <li>버거킹</li>
-    </ul>
-    <button>이벤트</button>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>index.html</title>
+</head>
+<style>
+  * {
+    background-color: black;
+    color: white;
+  }
+</style>
 
+<body>
+  <h3>자바스크립트 연습</h3>
+  <ul id="second">
+    내가 좋아하는 음식(육성수)
+    <!-- 햄버거 li 리스트는 js파일로 만든 이벤트 걸리는지 확인 위해 만듬 -->
+    <li>노브랜드</li>
+    <li>맥도날드</li>
+    <li>버거킹</li>
+  </ul>
 
-    <script src="/js/date.js"></script>
-  </body>
+  년도: <input type="number" id="yyyy" value='2025';/>
+  <!---->
+  월: <input type="number" id="mm" value="12" />
+  <button>이전달</button>  <!----->
+  <button>달력출력</button>
+  <button>다음달</button>
+  <div id="calendar"></div>
+  <script src="/fun_javascript/js/date.js">
+    document.querySelector("button").addEventListener("click", (e) => {
+      const year = document.querySelector("#yyyy").value;
+      const month = document.querySelector("#mm").value;
+      printCalendar(year, month);
+    });
+      </script>
+      </body>
+      
 </html>
 
 <!-- <li
@@ -49,7 +62,7 @@
       >
         평양냉면
       </li> -->
-    <!-- <table border="3">
+<!-- <table border="3">
       <thead>
         <tr>
           <th>아이디</th>
